<resources>
    <string name="app_name">PandicaZoo</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">PandicaZoo</string>
    <string name="nav_header_subtitle">pandica.zoo@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="add_to_cart_button">Add to cart</string>
    <string name="dialog_cart">Item added to your cart!</string>
    <string name="go_to_cart">Go to cart</string>
    <string name="continue_shopping">Continue shopping</string>

    <string name="menu_home">Home</string>
    <string name="menu_packages">Packages</string>
    <string name="menu_events">Events</string>
    <string name="menu_cart">Cart</string>
    <string name="menu_profile">Profile</string>
</resources>