<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_packages"
            android:title="@string/menu_packages" />
        <item
            android:id="@+id/nav_events"
            android:title="@string/menu_events" />
        <item
            android:id="@+id/nav_animals"
            android:title="Animals" />

        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/menu_profile" />

        <item
            android:id="@+id/nav_cart"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_cart" />
    </group>
</menu>