<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.padnica_zoo.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_packages"
        android:name="com.example.padnica_zoo.ui.packages.PackagesFragment"
        android:label="@string/menu_packages"
        tools:layout="@layout/fragment_packages">

        <action
            android:id="@+id/action_nav_packages_to_nav_cart"
            app:destination="@id/nav_cart"
            app:popUpTo="@id/nav_packages"
            app:popUpToInclusive="true" />

    </fragment>

    <fragment
        android:id="@+id/nav_events"
        android:name="com.example.padnica_zoo.ui.events.EventsFragment"
        android:label="@string/menu_events"
        tools:layout="@layout/fragment_events" />

    <fragment
        android:id="@+id/nav_animals"
        android:name="com.example.padnica_zoo.ui.animals.AnimalsFragment"
        android:label="Animals"
        tools:layout="@layout/fragment_animals" />

    <fragment
        android:id="@+id/nav_cart"
        android:name="com.example.padnica_zoo.ui.cart.CartFragment"
        android:label="@string/menu_cart"
        tools:layout="@layout/fragment_cart" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.padnica_zoo.ui.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />

</navigation>